--- a/tasks/5/x5.cabal
+++ b/tasks/5/x5.cabal
@@ -35,5 +35,6 @@ executable x5
                     , threepenny-gui
                     , bytestring
                     , stm
+                    , containers
     hs-source-dirs:   app
     default-language: Haskell2010
